# tqapi

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.html  README.md  build_pyext.bat  distutils.cfg.win32  requirements.txt  setup.py
c/: CMakeLists.txt  build_pyext.bat  impl_data_api.h  impl_tquant_api.cpp  impl_tquant_api.h  impl_trade_api.h  setup.py  tqapi_cs.cpp  tquant_api.h  tquant_api_test.cpp
c/api/: CMakeLists.txt  impl_data_api.h  impl_tquant_api.cpp  impl_tquant_api.h  impl_trade_api.h  tqapi_cs.cpp  tqapi_cs.h  tqapi_ffi.cpp  tqapi_ffi.h  tqapi_ffi_dapi.cpp  tqapi_ffi_tapi.cpp  tqapi_ffi_tqs.cpp  tquant_api.h  tquant_api_test.cpp
c/c/: CMakeLists.txt  impl_data_api.h  impl_tquant_api.cpp  impl_tquant_api.h  impl_trade_api.h  tquant_api.cpp  tquant_api.h  tquant_api_test.cpp
c/java/: files  pom.xml
c/java/src/main/native/: CMakeLists.txt  com_acqusta_tquant_api_impl_DataApiJni.h  com_acqusta_tquant_api_impl_TQuantApiJni.cpp  com_acqusta_tquant_api_impl_TradeApiJni.cpp
c/lib/glog-master/: CMakeLists.txt  CMakeLists.txt.t  UpgradeLog.htm  google-glog.sln
c/lib/glog-master/src/: logging.cc  utilities.cc
c/lib/glog-master/src/glog/: logging.h.in
c/lib/glog-master/tq/glog/: logging.h
c/lib/glog-master/tq/linux/: config.h
c/lib/glog-master/tq/osx/: config.h
c/lib/glog-master/vsprojects/libglog/: libglog.vcxproj
c/lib/glog-master/vsprojects/libglog_static/: libglog_static.vcxproj  libglog_static.vcxproj.filters
c/lib/glog-master/vsprojects/logging_unittest/: logging_unittest.vcxproj
c/lib/glog-master/vsprojects/logging_unittest_static/: logging_unittest_static.vcxproj  (+1 more)
c/lib/loop/: CMakeLists.txt  MessageLoop.cpp  MessageLoop.h  MsgLoopFuture.h  MsgRunLoop.h
c/lib/msgpack/: CMakeLists.txt
c/lib/myutils/: CMakeLists.txt  CMakeLists.txt.bak  connection.h  filemapping.cpp  filemapping.h  ipc_connection.cpp  ipc_connection.h  jsonrpc.cpp  jsonrpc.h  misc.h  mprpc.cpp  mprpc.h  mprpc_socket.cpp  mprpc_socket.h  shm_queue.h  shmem_connection.cpp  shmem_connection.h  socket_connection.cpp  socket_connection.h  socketutils.cpp  socketutils.h  zmq_connection.cpp  zmq_connection.h
c/lib/snappy/: snappy-stubs-public.h  snappy.cc
c/lib/zeromq-4.2.1/: CMakeLists.txt  ChangeLog  Makefile.in  configure
c/lib/zeromq-4.2.1/doc/: Makefile.in  zmq.7  zmq.html  zmq_atomic_counter_dec.3  zmq_atomic_counter_dec.html  zmq_atomic_counter_destroy.3  zmq_atomic_counter_destroy.html  zmq_atomic_counter_inc.3  zmq_atomic_counter_inc.html  zmq_atomic_counter_new.3  zmq_atomic_counter_new.html  zmq_atomic_counter_set.3  zmq_atomic_counter_set.html  zmq_atomic_counter_value.3  zmq_atomic_counter_value.html  zmq_bind.3  zmq_bind.html  zmq_close.3  zmq_close.html  zmq_connect.3  zmq_connect.html  zmq_ctx_get.3  zmq_ctx_get.html  zmq_ctx_new.3  zmq_ctx_new.html  zmq_ctx_set.3  zmq_ctx_set.html  zmq_ctx_shutdown.3  zmq_ctx_shutdown.html  zmq_ctx_term.3  zmq_ctx_term.html  zmq_curve.7  zmq_curve.html  zmq_curve_keypair.3  zmq_curve_keypair.html  zmq_curve_public.3  zmq_curve_public.html  zmq_disconnect.3  zmq_disconnect.html  zmq_errno.3  (+87 more)
c/lib/zeromq-4.2.1/src/: platform.hpp.in
c/lib/zeromq-4.2.1/tq/: SodiumConfig.cmake
c/pyext/: CMakeLists.txt  __init__.py  test2.py  tqapi.py  tqapi_dapi.cpp  tqapi_py.cpp  tqapi_py.h  tqapi_tapi.cpp
c/tqs/: CMakeLists.txt  algo.h  logger.cpp  logger.h  stralet.cpp  stralet.h  tqs_cs.cpp
c/tqs/algo/: algo_pm.cpp  algo_pm.h
c/tqs/bt/: backtest.cpp  backtest.h  demo.cpp  demo_doublema.cpp  demo_ifhft.cpp  demo_rbreaker.cpp  sim_context.cpp  sim_context.h  sim_data.cpp  sim_data.h  sim_trade.cpp  sim_trade.h  sim_utils.h
c/tqs/demo/: demo.cpp  demo_doublema.cpp  demo_ifhft.cpp  demo_rbreaker.cpp
c/tqs/rt/: realtime.cpp  realtime.h
cs/: CMakeLists.txt  compile.bat  compile.sh  tqapi.sln  tqapi_cs.sln
cs/Test/: CsvReader.cs  Program.cs  StraletDemo.cs  Test.csproj  TestFSM.cs  packages.config
cs/TestUI/: BarChart.Designer.cs  BarChart.cs  GlobalData.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  PositionForm.Designer.cs  PositionForm.cs  TestControl.Designer.cs  TestControl.cs  TestUI.csproj  TickChart.Designer.cs  TickChart.cs  TickForm.Designer.cs  TickForm.cs  TrendChart.Designer.cs  TrendChart.cs  TrendForm.Designer.cs  TrendForm.cs  TrendForm.resx
cs/TestUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
cs/src/: DataApi.cs  TQuantApi.csproj  TqapiDll.cs  TradeApi.cs  tqapi_cs.csproj
cs/src/Properties/: AssemblyInfo.cs
cs/src/Properties/PublishProfiles/: FolderProfile.pubxml
cs/src/api/: DataApi.cs  TQuantApi.cs  TqapiDll.cs  TradeApi.cs
cs/src/tqs/: BackTest.cs  FSM.cs  FsmStralet.cs  RealTime.cs  Stralet.cs  TqsDll.cs
dotnet/: tqapi.sln
java/: .classpath  .gitignore  CMakeLists.txt  build.bat  build.sh  build_jni.bat  pom.xml
java/src/main/native/: CMakeLists.txt  com_acqusta_tquant_api_impl_DataApiJni.cpp  com_acqusta_tquant_api_impl_DataApiJni.h  com_acqusta_tquant_api_impl_TQuantApiJni.cpp  com_acqusta_tquant_api_impl_TQuantApiJni.h  com_acqusta_tquant_api_impl_TradeApiJni.cpp  com_acqusta_tquant_api_impl_TradeApiJni.h  com_acqusta_tquant_stralet_impl_StraletContextJni.cpp  com_acqusta_tquant_stralet_impl_StraletContextJni.h  com_acqusta_tquant_stralet_impl_StraletJni.cpp  com_acqusta_tquant_stralet_impl_StraletJni.h  tqapi_jni.cpp  tqapi_jni.h
lib/jsoncpp/: CMakeLists.txt
lib/msgpack/: CMakeLists.txt
lib/myutils/: CMakeLists.txt  connection.h  csvparser.cpp  filemapping.cpp  filemapping.h  ipc_common.cpp  ipc_common.h  ipc_connection.cpp  ipc_connection.h  misc.cpp  misc.h  mprpc.cpp  mprpc.h  shm_queue.h  socket_connection.cpp  socket_connection.h  socketutils.cpp  socketutils.h  stringutils.h  timeutils.h  unicode.cpp  unicode.h
lib/myutils/loop/: AsyncCall.h  CMakeLists.txt  MessageLoop.cpp  MessageLoop.h  MsgLoopFuture.h  MsgRunLoop.h  RunLoop.cpp  RunLoop.h
pyext/: CMakeLists.txt  __init__.py  stralet.py  test.py  test_stralet.py  tqapi.py  tqapi_dapi.cpp  tqapi_py.cpp  tqapi_py.h  tqapi_tapi.cpp  tqs_stralet.cpp
pyext/demo/: demo_rbreaker.py
(+92 files in other folders)
