project(msgpack)

set(SRC
    include/msgpack.h
    include/msgpack/fbuffer.h
    include/msgpack/gcc_atomic.h
    include/msgpack/object.h
    include/msgpack/pack.h
    include/msgpack/pack_define.h
    include/msgpack/pack_template.h
    include/msgpack/predef
    include/msgpack/predef.h
    include/msgpack/predef/architecture
    include/msgpack/predef/architecture.h
    include/msgpack/predef/architecture/alpha.h
    include/msgpack/predef/architecture/arm.h
    include/msgpack/predef/architecture/blackfin.h
    include/msgpack/predef/architecture/convex.h
    include/msgpack/predef/architecture/ia64.h
    include/msgpack/predef/architecture/m68k.h
    include/msgpack/predef/architecture/mips.h
    include/msgpack/predef/architecture/parisc.h
    include/msgpack/predef/architecture/ppc.h
    include/msgpack/predef/architecture/pyramid.h
    include/msgpack/predef/architecture/rs6k.h
    include/msgpack/predef/architecture/sparc.h
    include/msgpack/predef/architecture/superh.h
    include/msgpack/predef/architecture/sys370.h
    include/msgpack/predef/architecture/sys390.h
    include/msgpack/predef/architecture/x86
    include/msgpack/predef/architecture/x86.h
    include/msgpack/predef/architecture/x86/32.h
    include/msgpack/predef/architecture/x86/64.h
    include/msgpack/predef/architecture/z.h
    include/msgpack/predef/compiler
    include/msgpack/predef/compiler.h
    include/msgpack/predef/compiler/borland.h
    include/msgpack/predef/compiler/clang.h
    include/msgpack/predef/compiler/comeau.h
    include/msgpack/predef/compiler/compaq.h
    include/msgpack/predef/compiler/diab.h
    include/msgpack/predef/compiler/digitalmars.h
    include/msgpack/predef/compiler/dignus.h
    include/msgpack/predef/compiler/edg.h
    include/msgpack/predef/compiler/ekopath.h
    include/msgpack/predef/compiler/gcc.h
    include/msgpack/predef/compiler/gcc_xml.h
    include/msgpack/predef/compiler/greenhills.h
    include/msgpack/predef/compiler/hp_acc.h
    include/msgpack/predef/compiler/iar.h
    include/msgpack/predef/compiler/ibm.h
    include/msgpack/predef/compiler/intel.h
    include/msgpack/predef/compiler/kai.h
    include/msgpack/predef/compiler/llvm.h
    include/msgpack/predef/compiler/metaware.h
    include/msgpack/predef/compiler/metrowerks.h
    include/msgpack/predef/compiler/microtec.h
    include/msgpack/predef/compiler/mpw.h
    include/msgpack/predef/compiler/palm.h
    include/msgpack/predef/compiler/pgi.h
    include/msgpack/predef/compiler/sgi_mipspro.h
    include/msgpack/predef/compiler/sunpro.h
    include/msgpack/predef/compiler/tendra.h
    include/msgpack/predef/compiler/visualc.h
    include/msgpack/predef/compiler/watcom.h
    include/msgpack/predef/detail
    include/msgpack/predef/detail/_cassert.h
    include/msgpack/predef/detail/_exception.h
    include/msgpack/predef/detail/comp_detected.h
    include/msgpack/predef/detail/endian_compat.h
    include/msgpack/predef/detail/os_detected.h
    include/msgpack/predef/detail/platform_detected.h
    include/msgpack/predef/detail/test.h
    include/msgpack/predef/detail/test_def.h
    include/msgpack/predef/hardware
    include/msgpack/predef/hardware.h
    include/msgpack/predef/hardware/simd
    include/msgpack/predef/hardware/simd.h
    include/msgpack/predef/hardware/simd/arm
    include/msgpack/predef/hardware/simd/arm.h
    include/msgpack/predef/hardware/simd/arm/versions.h
    include/msgpack/predef/hardware/simd/ppc
    include/msgpack/predef/hardware/simd/ppc.h
    include/msgpack/predef/hardware/simd/ppc/versions.h
    include/msgpack/predef/hardware/simd/x86
    include/msgpack/predef/hardware/simd/x86.h
    include/msgpack/predef/hardware/simd/x86/versions.h
    include/msgpack/predef/hardware/simd/x86_amd
    include/msgpack/predef/hardware/simd/x86_amd.h
    include/msgpack/predef/hardware/simd/x86_amd/versions.h
    include/msgpack/predef/language
    include/msgpack/predef/language.h
    include/msgpack/predef/language/objc.h
    include/msgpack/predef/language/stdc.h
    include/msgpack/predef/language/stdcpp.h
    include/msgpack/predef/library
    include/msgpack/predef/library.h
    include/msgpack/predef/library/c
    include/msgpack/predef/library/c.h
    include/msgpack/predef/library/c/_prefix.h
    include/msgpack/predef/library/c/gnu.h
    include/msgpack/predef/library/c/uc.h
    include/msgpack/predef/library/c/vms.h
    include/msgpack/predef/library/c/zos.h
    include/msgpack/predef/library/std
    include/msgpack/predef/library/std.h
    include/msgpack/predef/library/std/_prefix.h
    include/msgpack/predef/library/std/cxx.h
    include/msgpack/predef/library/std/dinkumware.h
    include/msgpack/predef/library/std/libcomo.h
    include/msgpack/predef/library/std/modena.h
    include/msgpack/predef/library/std/msl.h
    include/msgpack/predef/library/std/roguewave.h
    include/msgpack/predef/library/std/sgi.h
    include/msgpack/predef/library/std/stdcpp3.h
    include/msgpack/predef/library/std/stlport.h
    include/msgpack/predef/library/std/vacpp.h
    include/msgpack/predef/make.h
    include/msgpack/predef/os
    include/msgpack/predef/os.h
    include/msgpack/predef/os/aix.h
    include/msgpack/predef/os/amigaos.h
    include/msgpack/predef/os/android.h
    include/msgpack/predef/os/beos.h
    include/msgpack/predef/os/bsd
    include/msgpack/predef/os/bsd.h
    include/msgpack/predef/os/bsd/bsdi.h
    include/msgpack/predef/os/bsd/dragonfly.h
    include/msgpack/predef/os/bsd/free.h
    include/msgpack/predef/os/bsd/net.h
    include/msgpack/predef/os/bsd/open.h
    include/msgpack/predef/os/cygwin.h
    include/msgpack/predef/os/haiku.h
    include/msgpack/predef/os/hpux.h
    include/msgpack/predef/os/ios.h
    include/msgpack/predef/os/irix.h
    include/msgpack/predef/os/linux.h
    include/msgpack/predef/os/macos.h
    include/msgpack/predef/os/os400.h
    include/msgpack/predef/os/qnxnto.h
    include/msgpack/predef/os/solaris.h
    include/msgpack/predef/os/unix.h
    include/msgpack/predef/os/vms.h
    include/msgpack/predef/os/windows.h
    include/msgpack/predef/other
    include/msgpack/predef/other.h
    include/msgpack/predef/other/endian.h
    include/msgpack/predef/platform
    include/msgpack/predef/platform.h
    include/msgpack/predef/platform/mingw.h
    include/msgpack/predef/platform/windows_desktop.h
    include/msgpack/predef/platform/windows_phone.h
    include/msgpack/predef/platform/windows_runtime.h
    include/msgpack/predef/platform/windows_store.h
    include/msgpack/predef/version.h
    include/msgpack/predef/version_number.h
    include/msgpack/sbuffer.h
    include/msgpack/sysdep.h
    include/msgpack/unpack.h
    include/msgpack/unpack_define.h
    include/msgpack/unpack_template.h
    include/msgpack/util.h
    include/msgpack/version.h
    include/msgpack/version_master.h
    include/msgpack/vrefbuffer.h
    include/msgpack/zbuffer.h
    include/msgpack/zone.h
    src/objectc.c
    src/unpack.c
    src/version.c
    src/vrefbuffer.c
    src/zone.c
)

include_directories( include )

add_library(msgpack STATIC ${SRC})
install(TARGETS msgpack DESTINATION cpp)